Simplified ExpenseServiceImpl